--- a/public/index/css/SignUpStyle.css
+++ b/public/index/css/SignUpStyle.css
@@ -3,11 +3,14 @@ body {
   background-repeat: repeat;
 }
 
-/* Doesn't work with cols
-#signupForm {
-  background-color: whitesmoke;
+#SignUpResultMessage{
+  margin-left: 20%;
+  margin-right: 20%;
+  background-color: darksalmon;
+  border-radius: 10%;
+  padding: 1%;
+  display: none;
 }
-*/
 
 #signupLabel {
   font-weight: bold;
